syntax = "proto3";

package com.github.joaolucasl.chumlee;

service DiscountService {
    rpc GetDiscount (DiscountRequest) returns (DiscountResponse) {}
}

message DiscountRequest {
    string user_id = 1;
    string product_id = 2;
}

message DiscountResponse {
    float discount = 1;
    int32 amount = 2;
}
